--- a/lwxchat/pom.xml
+++ b/lwxchat/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>spring-websocket</artifactId>
             <version>4.3.13.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.58</version>
+        </dependency>
     </dependencies>
 
     <build>
