--- a/chatproducer/pom.xml
+++ b/chatproducer/pom.xml
@@ -72,6 +72,13 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
+            <version>2.0.1.RELEASE</version>
+        </dependency>
+
+
         <!-- 二维码 -->
 
         <dependency>
